
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct thread_args {scalar_t__* thp_chk_map; size_t off; int stop; } ;


 int MADV_DONTNEED ;
 int MAP_SIZE ;
 scalar_t__ MEMESET_VAL ;
 int madvise (scalar_t__*,int ,int ) ;
 int sched_yield () ;

void *wait_for_success(struct thread_args *args) {
    while (args->thp_chk_map[args->off] != MEMESET_VAL) {
        madvise(args->thp_chk_map, MAP_SIZE, MADV_DONTNEED);
        sched_yield();
    }

    args->stop = 1;
    return ((void*)0);
}
